RESOLVED FIXED96554
REGRESSION(r127438): Google Docs to renders text too small.
https://bugs.webkit.org/show_bug.cgi?id=96554
Summary REGRESSION(r127438): Google Docs to renders text too small.
Ojan Vafai
Reported 2012-09-12 13:50:00 PDT
1. Make your window small (e.g. 800x600 or smaller). 2. Load https://docs.google.com/a/google.com/document/d/1I3RfUbuVVoMB4JY3o6qypiEUv7Y7zfEGmG3V78Fa5Ok/edit. Initially it loads fine, then a few seconds after load, all the text resizes smaller, but the red underlines for spelling mistakes don't move. I bisected webkit revisions to http://trac.webkit.org/changeset/127438. I was testing on Chromium Linux.
Attachments
Patch IV: A New Hope (7.83 KB, patch)
2012-09-13 20:32 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2012-09-12 14:28:14 PDT
Repro'd on applemac WebKit. Taking.
Andreas Kling
Comment 2 2012-09-12 22:33:21 PDT
Looks like something goes wrong with sharing of ElementAttributeData for elements with inline style. I don't fully understand the problem yet, will continue investigating tomorrow.
Andreas Kling
Comment 3 2012-09-13 20:32:35 PDT
Created attachment 164039 [details] Patch IV: A New Hope
Radar WebKit Bug Importer
Comment 4 2012-09-13 20:50:08 PDT
WebKit Review Bot
Comment 5 2012-09-15 16:16:27 PDT
Comment on attachment 164039 [details] Patch IV: A New Hope Clearing flags on attachment: 164039 Committed r128697: <http://trac.webkit.org/changeset/128697>
WebKit Review Bot
Comment 6 2012-09-15 16:16:30 PDT
All reviewed patches have been landed. Closing bug.
Andreas Kling
Comment 7 2012-09-17 11:02:14 PDT
Big thanks to Ojan for bisecting this! :)
Ojan Vafai
Comment 8 2012-09-17 11:07:14 PDT
(In reply to comment #7) > Big thanks to Ojan for bisecting this! :) Glad you were able to fix it so quickly!
Note You need to log in before you can comment on or make changes to this bug.